I think I have the grapesjs editor about figured out atleast ui wise Im able to add some custom elements. I also upgraded node and npm in order to even run nextjs

--- a/topdev-blog/styles/globals.css
+++ b/topdev-blog/styles/globals.css
@@ -105,3 +105,15 @@ a {
     color-scheme: dark;
   }
 }
+
+
+
+
+.gjs-block {
+  width:5% !important; 
+  height: auto;
+  min-height: auto;
+}
+#editor{
+  height:auto
+}
