added some style to the register page as well as a dropdown for routing component which I added in the header portion of Layout.js I added some styles to Home.modules.css for the dropdown divA console.log was added in the users api route I also made some changes to the Login register modal component for a user to be successfully registered

--- a/topdev-blog/styles/Home.module.css
+++ b/topdev-blog/styles/Home.module.css
@@ -7,8 +7,14 @@
   background-color: black;
   color:rgb(61, 96, 152);
   padding:2%;
-
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
   width:100%
+}
+.dropDown{
+  padding-top: 5%;
+  padding-right: 2%
 }
 .footer{
   //background-color: white;
@@ -34,6 +40,17 @@
 @media screen and (min-width:1024px) {
   .imgDiv{
     width:8%;
+  }
+}
+
+@media screen and (min-width:540px) {
+  .dropDown{
+    padding-top:4%;
+  }
+}
+@media screen and (min-width:768px) {
+  .dropDown{
+    padding-top:5%;
   }
 }
 
