--- a/topdev-blog/styles/Home.module.css
+++ b/topdev-blog/styles/Home.module.css
@@ -20,6 +20,10 @@
   //background-color: white;
   background-color: black;
   color:rgb(61, 96, 152);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 3%;
 }
 .imgDiv{
  position: relative;
