updated the add category button text in the adminDash.js page added a style in global.css for the category buttons displayed ont he home page also on the home page I added the functionality to display posts according to the category chosen via the category buttons This category feature is done

--- a/topdev-blog/styles/globals.css
+++ b/topdev-blog/styles/globals.css
@@ -92,3 +92,7 @@ a {
 #my-img{
   width:50%
 }
+.category-btn{
+  background: linear-gradient(to right,rgb(33, 43, 89),rgb(61, 96, 152));
+  color:#F8E183;
+}
