added some new styles to the home page bnlogPost cards using global.css as well as bootstrap classes for grid spacing in the admin dash I also added styles to the the delete buttons

--- a/topdev-blog/styles/globals.css
+++ b/topdev-blog/styles/globals.css
@@ -96,3 +96,14 @@ a {
   background: linear-gradient(to right,rgb(33, 43, 89),rgb(61, 96, 152));
   color:#F8E183;
 }
+
+.post-card{
+  background: linear-gradient(to right,rgb(33, 43, 89),rgb(61, 96, 152));
+  border: 2px solid #F8E183 !important;
+  height:100% !important;
+}
+
+.postCardTitle{
+  color: #F8E183
+}
+
