--- a/topdev-blog/styles/Home.module.css
+++ b/topdev-blog/styles/Home.module.css
@@ -45,9 +45,10 @@
   text-align: center;
   text-decoration: none;
 }
+
 @media screen and (min-width:360px) {
   .imgDiv{
-    width:25%;
+    width:22%;
   }
 }
 
@@ -64,13 +65,16 @@
   }
 }
 @media screen and (min-width:768px) {
+  .imgDiv{
+    width:17%;
+  }
   .dropDown{
     padding-top:5%;
   }
 }
 @media screen and (min-width:1024px) {
   .imgDiv{
-    width:8%;
+    width:10%;
     height: 15vh;
   }
   .aboutImg{
