--- a/topdev-blog/styles/Home.module.css
+++ b/topdev-blog/styles/Home.module.css
@@ -46,6 +46,17 @@
   text-decoration: none;
 }
 
+.canvas{
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin-top:5em;
+}
+.myDiv{
+  position: relative;
+  height: 100vh;
+}
+
 @media screen and (min-width:360px) {
   .imgDiv{
     width:22%;
