--- a/topdev-blog/styles/globals.css
+++ b/topdev-blog/styles/globals.css
@@ -106,4 +106,10 @@ a {
 .postCardTitle{
   color: #F8E183
 }
+.active-now{
+  background: rgb(33, 43, 89) !important;
+  border: 1px solid #F8E183 !important;
+  color: #F8E183 !important;
+}
+
 
