--- a/topdev-blog/styles/globals.css
+++ b/topdev-blog/styles/globals.css
@@ -48,7 +48,7 @@
   padding: 0;
   margin: 0;
 }
-
+/*Anthing with !important is overiding a bootstrap style*/
 html,
 body {
   max-width: 100vw;
@@ -111,5 +111,21 @@ a {
   border: 1px solid #F8E183 !important;
   color: #F8E183 !important;
 }
+.cat-button{
+  color:#F8E183 !important;
+}
+/*below overrides bootstrap .btn class which is only being used in title modal on create post page as of now*/
+.btn{
+  flex:none !important;
+}
 
+.title-input{
+  border: 3px solid rgb(61, 96, 152);
+  border-radius: 8px;
+}
 
+.like-share-icon{
+  background-color:rgb(61, 96,152);
+  color:#F8E183;
+  border: none;
+}
