--- a/topdev-blog/styles/globals.css
+++ b/topdev-blog/styles/globals.css
@@ -57,12 +57,13 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /*background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb));*/
+    background:linear-gradient(195deg,rgba(61,96,152,1) ,rgba(0,0,0),rgba(33,49,89));
 }
 
 a {
@@ -84,6 +85,9 @@ a {
   height: auto;
   min-height: auto;
 }
+.home-text{
+  color:#fee084
+}
 #editor{
   height:auto;
   margin-top:10em;
@@ -98,8 +102,8 @@ a {
 }
 
 .post-card{
-  background: linear-gradient(to right,rgb(33, 43, 89),rgb(61, 96, 152));
-  border: 2px solid #F8E183 !important;
+  background:linear-gradient(95deg,rgba(0,0,0) ,rgba(61,96,152,1) ,rgba(33,49,89));
+  box-shadow: 0 0 10px #fee084;
   height:100% !important;
 }
 
@@ -128,4 +132,18 @@ a {
   background-color:rgb(61, 96,152);
   color:#F8E183;
   border: none;
+  box-shadow: 0 0 10px #fee084;
+}
+.footerSocial{
+  color: #fee084;
+}
+.mainCta{
+  color:#fee084;
+}
+.comments{
+  border-radius:11px;
+  box-shadow: 0 0 10px #fee084;
+}
+.likeModal{
+  box-shadow: 0 0 10px #fee084
 }
